# WatchGrid

./: .env.sample  .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: auth.py  db.py  profile_settings.py  settings.py
data/: movies.json
frontend/: app.py
models/: platform.py  review.py
pages/: addMovie.py  login.py  logout.py  movie_info.py  profile_settings.py  register.py  search.py  searchResults.py  viewMovie.py  watchlist.py
schemas/: movie.py  user.py
scripts/: insert_data.py  schema.sql  setup_db.py
tests/: test_db.py
wallet/: README  cwallet.sso  ewallet.p12  ewallet.pem  keystore.jks  tnsnames.ora  truststore.jks
